[package]
name = "dataprof-python"
version = "0.8.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Andrea Bozzo"]
description = "Python extension bindings for dataprof"
repository = "https://github.com/AndreaBozzo/dataprof"

[lib]
name = "dataprof_python"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
arrow = { version = "57.3.0", features = ["ffi"] }
bytes = { version = "1.10", optional = true }
dataprof = { version = "0.8.0", path = "../..", default-features = true }
dataprof-parquet = { version = "0.8.0", path = "../dataprof-parquet", features = ["arrow"], default-features = false }
dataprof-runtime = { version = "0.8.0", path = "../dataprof-runtime" }
pyo3 = { version = "0.27", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"], optional = true }
serde_json = "1.0"

[features]
default = []
python = []
python-async = ["dep:bytes", "dep:pyo3-async-runtimes", "dataprof/async-streaming"]
async-streaming = ["python-async", "dataprof/async-streaming"]
parquet-async = ["python-async", "dataprof/parquet-async"]
database = ["dataprof/database"]
postgres = ["database", "dataprof/postgres"]
mysql = ["database", "dataprof/mysql"]
sqlite = ["database", "dataprof/sqlite"]
