[package]
name = "dataprof-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Python extension bindings for dataprof"
readme = "README.md"

[lib]
name = "dataprof_python"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
bytes = { workspace = true, optional = true }
dataprof = { workspace = true, default-features = true }
dataprof-parquet = { workspace = true, features = ["arrow"] }
dataprof-runtime = { workspace = true }
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true, optional = true }
serde_json = { workspace = true }

[features]
default = []
python = []
python-async = ["dep:bytes", "dep:pyo3-async-runtimes", "dataprof/async-streaming"]
async-streaming = ["python-async", "dataprof/async-streaming"]
parquet-async = ["async-streaming", "dataprof/parquet-async"]
database = ["dataprof/database"]
postgres = ["database", "dataprof/postgres"]
mysql = ["database", "dataprof/mysql"]
sqlite = ["database", "dataprof/sqlite"]
