[package]
name = "dataprof-runtime"
version = "0.7.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Andrea Bozzo"]
description = "Shared runtime helpers and composed report types for dataprof"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dataprof-core = { path = "../dataprof-core" }
dataprof-metrics = { path = "../dataprof-metrics" }
log = "0.4"
rand = { version = "0.9.3", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.0", features = ["v4"] }