[package]
name = "dataprof-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared runtime helpers and composed report types for dataprof"
readme = "README.md"

[features]
default = []
async-streaming = [
	"dep:async-trait",
	"dep:bytes",
	"dep:futures",
	"dep:reqwest",
	"dep:tokio",
	"dep:tokio-util",
]
parquet-async = ["async-streaming"]

[dependencies]
async-trait = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
chrono = { workspace = true }
dataprof-core = { workspace = true }
dataprof-metrics = { workspace = true }
futures = { workspace = true, optional = true }
log = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
tokio-util = { workspace = true, optional = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
